# hands-on-whisper

./: .gitattributes  .gitignore  README.md  check.sh  health.sh  pyproject.toml  renovate-check.sh  renovate.json
calls/: finance.json  finance.md  finance.txt  finance_cloud.json  finance_cloud.md  finance_cpu.json  finance_cpu.md  finance_deepgram.json  finance_deepgram.md  finance_gpu copy.json  finance_gpu copy.md  finance_gpu.json  finance_gpu.md  finance_openai-api.json  finance_openai-api.md  finance_yandex.json  finance_yandex.md  sherbakov_call.json  sherbakov_call.md  sherbakov_call.txt  sherbakov_call_cpu.json  sherbakov_call_cpu.md  sherbakov_call_deepgram.json  sherbakov_call_deepgram.md  sherbakov_call_gpu.json  sherbakov_call_gpu.md  sherbakov_call_openai-api.json  sherbakov_call_openai-api.md  sherbakov_call_yandex.json  sherbakov_call_yandex.md
src/: backends.py  download_models.py  migrate_ids.py  optimize.py  report.py  runner.py  transcribe.py  transcribe_faster.py  transcribe_openai.py  transcribe_whispercpp.py
terraform/: check.sh  terraform.tfstate
terraform/selectel/: .gitignore  README.md  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_transcribe.py  test_transcribe_faster.py  test_transcribe_openai.py  test_transcribe_whispercpp.py
